--- a/06_Bootstrap/praktikum/createProduct.html
+++ b/06_Bootstrap/praktikum/createProduct.html
@@ -23,6 +23,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Jost&display=swap"
       rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <section class="">
@@ -107,7 +108,9 @@
                     name="pname"
                     required
                     minlength="6"
-                    maxlength="50" />
+                    maxlength="50"
+                    data-bs-toggle="tooltip"
+                    data />
                   <div class="valid-feedback">Valid.</div>
                   <div class="invalid-feedback">
                     Please fill out this field.
@@ -299,6 +302,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous">
+          var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+      var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+      })
+    </script>
   </body>
 </html>
